--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 base.url=https://i.imgur.com
 
 got.nothin=false
-load.properties=src/main/resources/application-${profile:null}.properties,application-extra.properties
+load.properties=application-${profile:null}.properties,application-extra.properties
