--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
 	<description>Demo project for Javalin</description>
 	<properties>
 		<java.version>19</java.version>
-		<avaje.inject.version>8.12-RC4</avaje.inject.version>
-		<avaje.jsonb.version>1.2-RC2</avaje.jsonb.version>
-		<avaje.http.version>1.25</avaje.http.version>
+		<avaje.inject.version>8.13-RC2</avaje.inject.version>
+		<avaje.jsonb.version>1.3-RC1</avaje.jsonb.version>
+		<avaje.config.version>3.0-RC1</avaje.config.version>
+		<avaje.http.version>1.27</avaje.http.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -65,7 +66,7 @@
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-config</artifactId>
-			<version>2.4</version>
+			<version>${avaje.config.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
