--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,18 @@
 	<name>avaje-helidon-nima-template</name>
 	<description>Demo project for Javalin</description>
 	<properties>
-		<java.version>19</java.version>
-		<avaje.inject.version>8.13-RC2</avaje.inject.version>
-		<avaje.jsonb.version>1.3-RC1</avaje.jsonb.version>
-		<avaje.config.version>3.0-RC1</avaje.config.version>
-		<avaje.http.version>1.27</avaje.http.version>
+		<java.version>20</java.version>
+		<avaje.inject.version>9.0</avaje.inject.version>
+		<avaje.jsonb.version>1.4</avaje.jsonb.version>
+		<avaje.config.version>3.1</avaje.config.version>
+		<avaje.http.version>1.35</avaje.http.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>io.helidon</groupId>
 				<artifactId>helidon-bom</artifactId>
-				<version>4.0.0-ALPHA4</version>
+				<version>4.0.0-ALPHA5</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
