--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -13,18 +14,18 @@
 	<name>avaje-helidon-nima-template</name>
 	<description>Demo project for Javalin</description>
 	<properties>
-		<java.version>19</java.version>
+		<java.version>20</java.version>
 		<avaje.inject.version>9.0</avaje.inject.version>
 		<avaje.jsonb.version>1.4</avaje.jsonb.version>
 		<avaje.config.version>3.1</avaje.config.version>
-		<avaje.http.version>1.35</avaje.http.version>
+		<avaje.http.version>1.37</avaje.http.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>io.helidon</groupId>
 				<artifactId>helidon-bom</artifactId>
-				<version>4.0.0-ALPHA5</version>
+				<version>4.0.0-ALPHA6</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -115,7 +116,7 @@
 			<artifactId>avaje-http-client-generator</artifactId>
 			<version>${avaje.http.version}</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>com.google.errorprone</groupId>
 			<artifactId>error_prone_core</artifactId>
@@ -149,31 +150,37 @@
 				<version>3.0.0</version>
 				<configuration>
 					<argLine>@{argLine} --enable-preview</argLine>
+					<useModulePath>false</useModulePath>
 				</configuration>
-			</plugin>	
-			<!-- Create the Runnable Jar with dependencies -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<transformers combine.self="override">
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.jojo.helidon.api.NimaAPI</mainClass>
-								</transformer>
-							</transformers>
-							<createDependencyReducedPom>false</createDependencyReducedPom>
-							<keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
+			<!-- Create the Runnable Jar with dependencies -->
+ <plugin>
+            <groupId>com.github.akman</groupId>
+            <artifactId>jlink-maven-plugin</artifactId>
+            <version>0.1.11</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>jlink</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <modulepath>
+                <dependencysets>
+                  <!-- add project dependencies to modulepath -->
+                  <dependencyset>
+                    <!-- add project output (module) to modulepath -->
+                    <includeoutput>true</includeoutput>
+                  </dependencyset>
+                </dependencysets>
+              </modulepath>
+              <noheaderfiles>true</noheaderfiles>
+              <nomanpages>true</nomanpages>
+              <stripdebug>true</stripdebug>
+            </configuration>
+          </plugin>
 			<plugin>
 				<groupId>com.spotify.fmt</groupId>
 				<artifactId>fmt-maven-plugin</artifactId>
@@ -197,7 +204,7 @@
 						<arg>-Xplugin:ErrorProne</arg>
 					</compilerArgs>
 				</configuration>
-			</plugin> 
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -218,6 +225,19 @@
 						</configuration>
 						<goals>
 							<goal>enforce</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>io.avaje</groupId>
+				<artifactId>avaje-inject-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>provides</goal>
 						</goals>
 					</execution>
 				</executions>
