--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>helidon-nima-webserver</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
@@ -79,13 +83,11 @@
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-inject-test</artifactId>
 			<version>${avaje.inject.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock-jre8-standalone</artifactId>
 			<version>2.28.0</version>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- Annotation processors -->
@@ -222,7 +224,6 @@
 						</goals>
 						<configuration>
 							<outputDirectory>${project.build.directory}/modules</outputDirectory>
-							<includeScope>runtime</includeScope>
 						</configuration>
 					</execution>
 				</executions>
@@ -248,14 +249,10 @@
 						<configuration>
 							<modulePath>
 								<path>${project.build.directory}/modules</path>
-								
 							</modulePath>
 							<modules>
 								<module>nima.example</module>
 							</modules>
-							<excludedResources>
-								<pattern>glob:/com.example/**</pattern>
-							</excludedResources>
 							<stripDebug>true</stripDebug>
 							<noManPages>true</noManPages>
 							<noHeaderFiles>true</noHeaderFiles>
