--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
 	<description>Demo project for Javalin</description>
 	<properties>
 		<java.version>20</java.version>
-		<avaje.inject.version>9.2</avaje.inject.version>
-		<avaje.jsonb.version>1.4</avaje.jsonb.version>
-		<avaje.config.version>3.2</avaje.config.version>
-		<avaje.http.version>1.40</avaje.http.version>
+		<avaje.inject.version>9.3-RC3</avaje.inject.version>
+		<avaje.jsonb.version>1.6-RC4</avaje.jsonb.version>
+		<avaje.config.version>3.5</avaje.config.version>
+		<avaje.http.version>1.44</avaje.http.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -115,12 +115,6 @@
 			<version>${avaje.http.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.google.errorprone</groupId>
-			<artifactId>error_prone_core</artifactId>
-			<version>2.15.0</version>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -173,8 +167,6 @@
 					<compilerArgs>
 						<arg>--enable-preview</arg>
 						<arg>--add-modules=jdk.incubator.concurrent</arg>
-						<arg>-XDcompilePolicy=simple</arg>
-						<arg>-Xplugin:ErrorProne</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
