--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Demo project for Javalin</description>
 	<properties>
 		<java.version>20</java.version>
-		<avaje.inject.version>9.3-RC3</avaje.inject.version>
+		<avaje.inject.version>9.3</avaje.inject.version>
 		<avaje.jsonb.version>1.6-RC5</avaje.jsonb.version>
 		<avaje.config.version>3.6</avaje.config.version>
 		<avaje.http.version>1.45</avaje.http.version>
