--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Demo project for Javalin</description>
 	<properties>
 		<java.version>20</java.version>
-		<avaje.inject.version>9.3</avaje.inject.version>
+		<avaje.inject.version>9.4-RC3</avaje.inject.version>
 		<avaje.jsonb.version>1.6-RC5</avaje.jsonb.version>
 		<avaje.config.version>3.6</avaje.config.version>
 		<avaje.http.version>1.45</avaje.http.version>
@@ -25,7 +25,7 @@
 			<dependency>
 				<groupId>io.helidon</groupId>
 				<artifactId>helidon-bom</artifactId>
-				<version>4.0.0-ALPHA6</version>
+				<version>4.0.0-M1</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
