--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.2</version>
-		<relativePath /> <!--lookupparentfromrepository-->
-	</parent>
 	<groupId>com.jojo.helidon.api</groupId>
 	<artifactId>avaje-helidon-nima</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>avaje-helidon-nima-template</name>
 	<description>Demo project for Javalin</description>
 	<properties>
-		<java.version>20</java.version>
-		<avaje.inject.version>9.4-RC3</avaje.inject.version>
+        <maven.compiler.release>20</maven.compiler.release>
+		<avaje.inject.version>9.4-RC4</avaje.inject.version>
 		<avaje.jsonb.version>1.6-RC5</avaje.jsonb.version>
 		<avaje.config.version>3.6</avaje.config.version>
-		<avaje.http.version>1.45</avaje.http.version>
+		<avaje.http.version>1.46</avaje.http.version>
+		<logback-classic.version>1.4.5</logback-classic.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -37,14 +32,6 @@
 			<artifactId>helidon-nima-webserver</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>7.2</version>
@@ -53,6 +40,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<version>${logback-classic.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
