--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 	<artifactId>avaje-helidon-nima</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>avaje-helidon-nima-template</name>
-	<description>Demo project for Javalin</description>
+	<description>Demo project for Helidon</description>
+	<parent>
+		<groupId>io.helidon.applications</groupId>
+		<artifactId>helidon-se</artifactId>
+		<version>4.0.0</version>
+		<relativePath />
+	</parent>
 	<properties>
 		<maven.compiler.release>21</maven.compiler.release>
 	</properties>
@@ -14,19 +20,19 @@
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima</artifactId>
-			<version>0.3</version>
+			<version>0.7</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima-generator</artifactId>
-			<version>0.3</version>
+			<version>0.7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima-test</artifactId>
-			<version>0.3</version>
+			<version>0.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
