--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-base.url=https://i.imgur.com
+base.url=https://i.imgur.com/bcVQzeZ.png
 
 got.nothin=false
 validation.resourcebundle.names=Messages
