--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
 			<artifactId>avaje-nima</artifactId>
 		</dependency>
 
+    <dependency>
+        <groupId>io.helidon.tracing</groupId>
+        <artifactId>helidon-tracing</artifactId>    
+    </dependency>
+    <dependency>
+        <groupId>io.helidon.webserver.observe</groupId>
+        <artifactId>helidon-webserver-observe-tracing</artifactId> 
+    </dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima-generator</artifactId>
