--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-base.url=https://i.imgur.com/bcVQzeZ.png
-
+base.url=https://encrypted-tbn2.gstatic.com
 got.nothin=false
 validation.resourcebundle.names=Messages
 validation.locale.addedLocales=es,de
