--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<relativePath />
 	</parent>
 	<properties>
-		<maven.compiler.release>21</maven.compiler.release>
+		<maven.compiler.release>22</maven.compiler.release>
 		<module.name>nima.example</module.name>
 	</properties>
 	<dependencies>
@@ -29,7 +29,16 @@
     </dependency>
     <dependency>
         <groupId>io.helidon.webserver.observe</groupId>
-        <artifactId>helidon-webserver-observe-tracing</artifactId> 
+        <artifactId>helidon-webserver-observe-tracing</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.helidon.tracing.providers</groupId>
+      <artifactId>helidon-tracing-providers-opentelemetry</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.helidon.metrics</groupId>
+      <artifactId>helidon-metrics-trace-exemplar</artifactId>
+      <scope>runtime</scope>
     </dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
@@ -76,7 +85,7 @@
 					<useModulePath>false</useModulePath>
 				</configuration>
 			</plugin>
-			<!-- Create the Runnable Jar with dependencies -->
+      <!-- Create the Runnable Jar with dependencies -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
