--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jojo.helidon.api</groupId>
 	<artifactId>avaje-helidon-nima</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>avaje-helidon-nima-template</name>
 	<description>Demo project for Helidon</description>
 	<parent>
