--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>io.avaje</groupId>
 		<artifactId>avaje-nima-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-RC1</version>
 		<relativePath />
 	</parent>
 	<properties>
