--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,22 @@
 version: 2
 updates:
-- package-ecosystem: maven
-  directory: "/"
-  schedule:
-    interval: "daily"
-  open-pull-requests-limit: 10
-  ignore:
-      - dependency-name: "jakarta.inject:jakarta.inject-api"
+  - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
+    target-branch: "master"
+
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    commit-message:
+      prefix: "[workflow]"
+    labels:
+      - "dependencies"
+    target-branch: "master"
