--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java_version }}
+          website: jdk.java.net
       - name: Maven cache
         uses: actions/cache@v4
         env:
