--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Java
-        uses: actions/setup-java@v4
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: ${{ matrix.java_version }}
           website: jdk.java.net
+          release: ${{ matrix.java_version }}
       - name: Maven cache
         uses: actions/cache@v4
         env:
