--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [21,GA,EA]
+        java_version: [21]
         os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up Java
-        uses: oracle-actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          website: jdk.java.net
-          release: ${{ matrix.java_version }}
+          java-version: ${{ matrix.java_version }}
+          distribution: "zulu"
       - name: Maven cache
         uses: actions/cache@v4
         env:
