--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>io.avaje</groupId>
+				<artifactId>avaje-provides-maven-plugin</artifactId>
+				<version>1.0</version>
+			</plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.12</version>
